@@ -5,6 +5,7 @@ import com.model.Product;
 import com.model.ProductReview;
 import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.SimpleIntegerProperty;
+import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
@@ -18,9 +19,11 @@ import javafx.scene.control.Hyperlink;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
+import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Region;
+import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 import javafx.animation.Timeline;
@@ -40,33 +43,44 @@ import java.util.ResourceBundle;
 
 public class ProductController implements Initializable {
 
-    @FXML private Button logoButton;
-    @FXML private Button promotionNavButton;
-    @FXML private Button cartNavButton;
-    @FXML private Button shopNavButton;
-    @FXML private Button orderNavButton;
-    @FXML private Hyperlink backToShopLink;
-    @FXML private Label productTitleLabel;
-    @FXML private Label productPriceLabel;
-    @FXML private Label productDescriptionLabel;
-    @FXML private ImageView productImageView;
-    @FXML private Label ratingSummaryLabel;
-    @FXML private Label reviewCountLabel;
-    @FXML private VBox reviewListContainer;
-    @FXML private Button viewMoreButton;
-    @FXML private Button viewLessButton;
-    @FXML private Label quantityLabel;
-    @FXML private Button checkoutButton;
-    @FXML private VBox mainContainer;
+    @FXML Button logoButton;
+    @FXML Button promotionNavButton;
+    @FXML Button cartNavButton;
+    @FXML Button shopNavButton;
+    @FXML Button orderNavButton;
+    @FXML Hyperlink backToShopLink;
+    @FXML Label productTitleLabel;
+    @FXML Label productPriceLabel;
+    @FXML Label productDescriptionLabel;
+    @FXML ImageView productImageView;
+    @FXML Label ratingSummaryLabel;
+    @FXML Label reviewCountLabel;
+    @FXML VBox reviewListContainer;
+    @FXML Button viewMoreButton;
+    @FXML Button viewLessButton;
+    @FXML Label quantityLabel;
+    @FXML Button checkoutButton;
+    @FXML BorderPane mainContainer;
+    @FXML StackPane searchBarContainer;
 
-    private Product currentProduct;
-    private List<ProductReview> allProductReviews;
-    private static final int INITIAL_REVIEW_COUNT = 2;
-    private final IntegerProperty quantity = new SimpleIntegerProperty(1);
+    Product currentProduct;
+    List<ProductReview> allProductReviews;
+    static final int INITIAL_REVIEW_COUNT = 2;
+    final IntegerProperty quantity = new SimpleIntegerProperty(1);
+
+    @FXML ImageView logoImageView;
+    @FXML Button decreaseQuantityButton;
+    @FXML Button increaseQuantityButton;
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        quantityLabel.textProperty().bind(quantity.asString());
+        if (quantityLabel != null) {
+            quantityLabel.textProperty().bind(quantity.asString());
+        }
+
+        if (shopNavButton != null) {
+            shopNavButton.getStyleClass().add("active");
+        }
     }
 
     public void initData(int productId) {
@@ -78,64 +92,108 @@ public class ProductController implements Initializable {
             updateReviewSummary();
             displayReviews(INITIAL_REVIEW_COUNT);
         } else {
-            productTitleLabel.setText("Product Not Found");
-            reviewListContainer.getChildren().add(new Label("Could not load product details."));
-            checkoutButton.setDisable(true);
-            viewMoreButton.setVisible(false);
-            viewLessButton.setVisible(false);
+            if (productTitleLabel != null) {
+                productTitleLabel.setText("Product Not Found");
+            }
+            if (reviewListContainer != null) {
+                reviewListContainer.getChildren().add(new Label("Could not load product details."));
+            }
+            if (checkoutButton != null) {
+                checkoutButton.setDisable(true);
+            }
+            if (viewMoreButton != null) {
+                viewMoreButton.setVisible(false);
+            }
+            if (viewLessButton != null) {
+                viewLessButton.setVisible(false);
+            }
         }
     }
 
     private void populateProductData(Product product) {
-        productTitleLabel.setText(product.getName());
-        productDescriptionLabel.setText(product.getDescription());
-        NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(Locale.of("id", "ID"));
-        productPriceLabel.setText(currencyFormatter.format(product.getPrice()));
+        if (productTitleLabel != null) {
+            productTitleLabel.setText(product.getName());
+        }
+        if (productDescriptionLabel != null) {
+            productDescriptionLabel.setText(product.getDescription());
+        }
+        if (productPriceLabel != null) {
+            NumberFormat currencyFormatter = NumberFormat.getCurrencyInstance(new Locale("id", "ID"));
+            productPriceLabel.setText(currencyFormatter.format(product.getPrice()));
+        }
 
-        Image image = createSafeImage(product.getGambar());
-        productImageView.setImage(image != null ? image : createSafeImage("/image/placeholder.png"));
+        if (productImageView != null) {
+            Image image = createSafeImage(product.getGambar());
+            productImageView.setImage(image != null ? image : createSafeImage("/image/placeholder.png"));
+        }
     }
 
     private void updateReviewSummary() {
         if (allProductReviews == null || allProductReviews.isEmpty()) {
-            ratingSummaryLabel.setText("N/A");
-            reviewCountLabel.setText("from 0 reviews");
+            if (ratingSummaryLabel != null) {
+                ratingSummaryLabel.setText("N/A");
+            }
+            if (reviewCountLabel != null) {
+                reviewCountLabel.setText("from 0 reviews");
+            }
             return;
         }
         double averageRating = allProductReviews.stream()
                 .mapToDouble(ProductReview::getStar)
                 .average()
                 .orElse(0.0);
-        ratingSummaryLabel.setText(String.format("%.1f / 5", averageRating));
-        reviewCountLabel.setText("from " + allProductReviews.size() + " reviews");
+        if (ratingSummaryLabel != null) {
+            ratingSummaryLabel.setText(String.format("%.1f / 5", averageRating));
+        }
+        if (reviewCountLabel != null) {
+            reviewCountLabel.setText("from " + allProductReviews.size() + " reviews");
+        }
     }
 
     private void displayReviews(int limit) {
-        reviewListContainer.getChildren().clear();
+        if (reviewListContainer != null) {
+            reviewListContainer.getChildren().clear();
+        }
+        
         if (allProductReviews == null || allProductReviews.isEmpty()) {
-            reviewListContainer.getChildren().add(new Label("No reviews for this product yet."));
-            viewMoreButton.setVisible(false);
-            viewLessButton.setVisible(false);
+            if (reviewListContainer != null) {
+                reviewListContainer.getChildren().add(new Label("No reviews for this product yet."));
+            }
+            if (viewMoreButton != null) {
+                viewMoreButton.setVisible(false);
+            }
+            if (viewLessButton != null) {
+                viewLessButton.setVisible(false);
+            }
             return;
         }
 
         allProductReviews.stream().limit(limit).forEach(review -> {
-            reviewListContainer.getChildren().add(createReviewCard(review));
+            if (reviewListContainer != null) {
+                reviewListContainer.getChildren().add(createReviewCard(review));
+            }
         });
 
         boolean hasMoreReviews = allProductReviews.size() > INITIAL_REVIEW_COUNT;
         boolean isExpanded = limit >= allProductReviews.size();
         
         if (hasMoreReviews) {
-            viewMoreButton.setVisible(!isExpanded);
-            viewLessButton.setVisible(isExpanded);
+            if (viewMoreButton != null) {
+                viewMoreButton.setVisible(!isExpanded);
+            }
+            if (viewLessButton != null) {
+                viewLessButton.setVisible(isExpanded);
+            }
         } else {
-            viewMoreButton.setVisible(false);
-            viewLessButton.setVisible(false);
+            if (viewMoreButton != null) {
+                viewMoreButton.setVisible(false);
+            }
+            if (viewLessButton != null) {
+                viewLessButton.setVisible(false);
+            }
         }
     }
 
-    // Metode untuk membuat kartu review
     private HBox createReviewCard(ProductReview review) {
         HBox card = new HBox(15);
         card.getStyleClass().add("card");
@@ -164,72 +222,65 @@ public class ProductController implements Initializable {
         return card;
     }
     
-    // ==================== NAVIGATION METHODS WITH FULL SCREEN ====================
     
     @FXML
     private void handleCheckout() {
-        System.out.println("🛒 Navigating to Checkout page (Full Screen)...");
-        
+        System.out.println("🛒 Navigating to Checkout page (inline)...");
+
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Checkout.fxml"));
-            Parent root = loader.load();
-
-            // Get CheckoutController and pass product data
-            CheckoutController checkoutController = loader.getController();
-            checkoutController.setProductData(currentProduct, quantity.get());
-            
-            System.out.println("✅ Product data passed to checkout:");
-            System.out.println("   Product: " + currentProduct.getName());
-            System.out.println("   Quantity: " + quantity.get());
-            System.out.println("   Price: " + currentProduct.getPrice());
-
-            // Get current stage and apply full screen navigation
-            Stage stage = (Stage) checkoutButton.getScene().getWindow();
-            
-            // Save current window state
-            boolean wasMaximized = stage.isMaximized();
-            double currentWidth = stage.getWidth();
-            double currentHeight = stage.getHeight();
-            
-            // Create scene with appropriate size
-            Scene scene;
-            if (wasMaximized) {
-                scene = new Scene(root, stage.getWidth(), stage.getHeight());
+            System.out.println("🔍 DEBUG - Current product data before checkout:");
+            if (currentProduct != null) {
+                System.out.println(" Product: " + currentProduct.getName());
+                System.out.println(" Price: " + currentProduct.getPrice());
             } else {
-                scene = new Scene(root, currentWidth, currentHeight);
-                // Force maximize for navigation
-                wasMaximized = true;
+                System.out.println(" ❌ currentProduct is NULL!");
             }
+            System.out.println(" Quantity: " + quantity.get());
+
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Checkout.fxml"));
+            Parent checkoutPage = loader.load();
+
+            CheckoutController checkoutController = loader.getController();
             
-            // Load Checkout CSS
+            if (checkoutController == null) {
+                System.out.println("❌ CheckoutController is NULL!");
+                throw new RuntimeException("Failed to get CheckoutController");
+            }
+
+            checkoutController.setProductData(currentProduct, quantity.get());
+
+            System.out.println("✅ Product data passed to checkout:");
+            System.out.println(" Product: " + currentProduct.getName());
+            System.out.println(" Quantity: " + quantity.get());
+            System.out.println(" Price: " + currentProduct.getPrice());
+
+            if (mainContainer != null) {
+                mainContainer.setTop(null);
+                mainContainer.setBottom(null);
+                mainContainer.setCenter(null);
+                mainContainer.setCenter(checkoutPage);
+            }
+
             try {
-                String cssUrl = getClass().getResource("/css/checkout.css").toExternalForm();
-                scene.getStylesheets().add(cssUrl);
-                System.out.println("✅ Loaded Checkout CSS");
+                String cssPath = getClass().getResource("/css/checkout.css").toExternalForm();
+                checkoutPage.getStylesheets().add(cssPath);
+                System.out.println("✅ Loaded Checkout CSS from: " + cssPath);
             } catch (Exception e) {
                 System.out.println("⚠️ Checkout CSS not found - " + e.getMessage());
             }
-            
-            // Set scene and title
-            stage.setScene(scene);
-            stage.setTitle("Moosic - Checkout");
-            
-            // Force maximize window with enhanced method
-            ensureMaximizedWindow(stage);
-            
-            stage.show();
-            System.out.println("✅ Successfully navigated to Checkout page (Full Screen)");
-            
+
+            System.out.println("✅ Successfully navigated to Checkout page (inline)");
+
         } catch (IOException e) {
             e.printStackTrace();
             System.err.println("❌ Failed to load Checkout.fxml: " + e.getMessage());
             showAlert(Alert.AlertType.ERROR, "Navigation Error", 
-                     "Could not navigate to Checkout page. File not found.");
+                "Could not navigate to Checkout page. File not found.");
         } catch (Exception e) {
             e.printStackTrace();
             System.err.println("❌ Unexpected error during checkout navigation: " + e.getMessage());
             showAlert(Alert.AlertType.ERROR, "Unexpected Error", 
-                     "An unexpected error occurred: " + e.getMessage());
+                "An unexpected error occurred: " + e.getMessage());
         }
     }
 
@@ -246,25 +297,20 @@ public class ProductController implements Initializable {
             FXMLLoader loader = new FXMLLoader(getClass().getResource(fxmlPath));
             Parent root = loader.load();
 
-            // Get current stage
             Stage stage = (Stage) sourceNode.getScene().getWindow();
             
-            // Save current window state
             boolean wasMaximized = stage.isMaximized();
             double currentWidth = stage.getWidth();
             double currentHeight = stage.getHeight();
             
-            // Create scene with appropriate size
             Scene scene;
             if (wasMaximized) {
                 scene = new Scene(root, stage.getWidth(), stage.getHeight());
             } else {
                 scene = new Scene(root, currentWidth, currentHeight);
-                // Force maximize for navigation
                 wasMaximized = true;
             }
 
-            // Load CSS if provided
             if (cssPath != null) {
                 try {
                     String cssUrl = getClass().getResource(cssPath).toExternalForm();
@@ -275,11 +321,9 @@ public class ProductController implements Initializable {
                 }
             }
 
-            // Set scene and title
             stage.setScene(scene);
             stage.setTitle(title);
             
-            // Force maximize window with enhanced method
             ensureMaximizedWindow(stage);
             
             stage.show();
@@ -304,11 +348,9 @@ public class ProductController implements Initializable {
      */
     private void ensureMaximizedWindow(Stage stage) {
         try {
-            // Method 1: Set maximized immediately
-            stage.setMaximized(false); // Reset first
-            stage.setMaximized(true);  // Then maximize
+            stage.setMaximized(false);
+            stage.setMaximized(true); 
             
-            // Method 2: Use Platform.runLater for delayed execution
             Platform.runLater(() -> {
                 if (!stage.isMaximized()) {
                     stage.setMaximized(true);
@@ -317,7 +359,6 @@ public class ProductController implements Initializable {
                 stage.requestFocus();
             });
             
-            // Method 3: Use Timeline for multiple attempts (aggressive approach)
             Timeline maxChecker = new Timeline();
             maxChecker.getKeyFrames().addAll(
                 new KeyFrame(Duration.millis(50), e -> {
@@ -348,81 +389,98 @@ public class ProductController implements Initializable {
         }
     }
 
-    // ==================== OTHER NAVIGATION HANDLERS ====================
 
-    @FXML private void handleViewMore() {
+    @FXML 
+    public void handleViewMore() {
         if (allProductReviews != null) {
             displayReviews(allProductReviews.size());
         }
     }
 
-    @FXML private void handleViewLess() {
+    @FXML 
+    public void handleViewLess() {
         displayReviews(INITIAL_REVIEW_COUNT);
     }
 
-    @FXML private void handleIncreaseQuantity() {
+    @FXML 
+    public void handleIncreaseQuantity() {
         quantity.set(quantity.get() + 1);
     }
 
-    @FXML private void handleDecreaseQuantity() {
+    @FXML 
+    public void handleDecreaseQuantity() {
         if (quantity.get() > 1) {
             quantity.set(quantity.get() - 1);
         }
     }
 
-    @FXML private void handleBackToShop() {
-        System.out.println("🔙 Navigating back to Shop page (Full Screen)...");
-        navigateToPageFullScreen("/fxml/Shop.fxml", "Moosic - Shop", "/css/shopstyle.css", backToShopLink);
-    }
-
-    @FXML private void handleLogoClick() {
-        System.out.println("🏠 Navigating to Homepage (Full Screen)...");
+    @FXML
+    private void handleBackToShop() {
+        System.out.println("🔙 Navigating back to Shop page (inline)...");
         
         try {
-            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/homepage.fxml"));
-            Parent root = loader.load();
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/Shop.fxml"));
+            Parent shopPage = loader.load();
 
-            // Get current stage
-            Stage stage = (Stage) logoButton.getScene().getWindow();
-            
-            // Save current window state
-            boolean wasMaximized = stage.isMaximized();
-            double currentWidth = stage.getWidth();
-            double currentHeight = stage.getHeight();
-            
-            // Create scene with appropriate size
-            Scene scene;
-            if (wasMaximized) {
-                scene = new Scene(root, stage.getWidth(), stage.getHeight());
-            } else {
-                scene = new Scene(root, currentWidth, currentHeight);
-                // Force maximize for navigation
-                wasMaximized = true;
+            if (mainContainer != null) {
+                mainContainer.setTop(null);
+                mainContainer.setBottom(null);
+                mainContainer.setCenter(null);
+                mainContainer.setCenter(shopPage);
             }
 
-            // Load Homepage CSS
             try {
-                String cssUrl = getClass().getResource("/css/homepage.css").toExternalForm();
-                scene.getStylesheets().add(cssUrl);
-                System.out.println("✅ Loaded Homepage CSS");
+                mainContainer.getStylesheets().clear();
+                mainContainer.getStylesheets().add(getClass().getResource("/css/shopstyle.css").toExternalForm());
+                System.out.println("Loading Shop CSS from: ");
             } catch (Exception e) {
-                System.out.println("⚠️ Homepage CSS not found - " + e.getMessage());
+                System.out.println("Shop CSS not found, using default styling");
             }
 
-            // Set scene and title
-            stage.setScene(scene);
-            stage.setTitle("Moosic - Home");
-            
-            // Force maximize window
-            ensureMaximizedWindow(stage);
-            
-            stage.show();
-            System.out.println("✅ Successfully navigated to Homepage (Full Screen)");
+            System.out.println("Successfully navigated back to Shop page (inline)");
 
         } catch (IOException e) {
             e.printStackTrace();
             showAlert(Alert.AlertType.ERROR, "Navigation Error",
-                "Could not open homepage: " + e.getMessage());
+                "Could not open shop page: " + e.getMessage());
+        }
+    }
+
+    @FXML
+    private void handleLogoNavigationToHome(ActionEvent event) {
+        System.out.println("Logo clicked, navigating to Home page (inline)...");
+
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/fxml/homepage.fxml"));
+            Parent homePage = loader.load();
+
+            mainContainer.setTop(null);
+            mainContainer.setBottom(null);
+            mainContainer.setCenter(null);
+            mainContainer.setCenter(homePage);
+
+            if (homePage instanceof Parent) {
+                ((Parent) homePage).getStylesheets().clear();
+            }
+
+            if (mainContainer.getScene() != null) {
+                mainContainer.getScene().getStylesheets().clear();
+            }
+
+            try {
+                mainContainer.getStylesheets().clear();
+                mainContainer.getStylesheets().add(getClass().getResource("/css/homepage.css").toExternalForm());
+                System.out.println("Loading Home CSS from: ");
+            } catch (Exception e) {
+                System.out.println("Home CSS not found, using default styling");
+            }
+
+            System.out.println("Switched to Home Page (inline)");
+
+        } catch (IOException e) {
+            e.printStackTrace();
+            showAlert(Alert.AlertType.ERROR, "Navigation Error",
+                "Could not open home page: " + e.getMessage());
         } catch (Exception e) {
             e.printStackTrace();
             showAlert(Alert.AlertType.ERROR, "Unexpected Error",
@@ -430,67 +488,38 @@ public class ProductController implements Initializable {
         }
     }
 
+    @FXML
+    private void handleLogoButtonEntered(MouseEvent event) {
+        if (logoButton != null) {
+            logoButton.setStyle("-fx-background-color: rgba(146, 172, 79, 0.1); -fx-border-color: transparent; -fx-cursor: hand; -fx-background-radius: 5;");
+        }
+    }
+    
+    @FXML
+    private void handleLogoButtonExited(MouseEvent event) {
+        if (logoButton != null) {
+            logoButton.setStyle("-fx-background-color: transparent; -fx-border-color: transparent; -fx-cursor: hand;");
+        }
+    }
+
     @FXML private void handlePromotionNav() {
         System.out.println("🎯 Navigating to Promotion page (Full Screen)...");
-        // navigateToPageFullScreen("/fxml/Promotion.fxml", "Moosic - Promotion", "/css/promotion.css", promotionNavButton);
     }
 
     @FXML private void handleCartNav() {
         System.out.println("🛒 Navigating to Cart page (Full Screen)...");
-        // navigateToPageFullScreen("/fxml/Cart.fxml", "Moosic - Cart", "/css/cart.css", cartNavButton);
     }
 
     @FXML private void handleShopNav() {
         System.out.println("🛍️ Navigating to Shop page (Full Screen)...");
-        navigateToPageFullScreen("/fxml/Shop.fxml", "Moosic - Shop", "/css/shopstyle.css", shopNavButton);
+        if (shopNavButton != null) {
+            navigateToPageFullScreen("/fxml/Shop.fxml", "Moosic - Shop", "/css/shopstyle.css", shopNavButton);
+        }
     }
 
     @FXML private void handleOrderNav() {
         System.out.println("📦 Navigating to Order page (Full Screen)...");
-        // navigateToPageFullScreen("/fxml/Order.fxml", "Moosic - Order", "/css/order.css", orderNavButton);
     }
-
-    // ==================== LEGACY NAVIGATION (for backward compatibility) ====================
-
-    private void navigateTo(String fxmlPath, Node currentNode) {
-        // Redirect to full screen navigation method
-        String title = "Moosic Application";
-        String cssPath = null;
-        
-        // Determine appropriate title and CSS based on path
-        if (fxmlPath.contains("Shop")) {
-            title = "Moosic - Shop";
-            cssPath = "/css/shopstyle.css";
-        } else if (fxmlPath.contains("homepage") || fxmlPath.contains("Homepage")) {
-            title = "Moosic - Home";
-            cssPath = "/css/homepage.css";
-        } else if (fxmlPath.contains("Checkout")) {
-            title = "Moosic - Checkout";
-            cssPath = "/css/checkout.css";
-        }
-        
-        navigateToPageFullScreen(fxmlPath, title, cssPath, currentNode);
-    }
-
-    private void loadStylesheet(Scene scene, String fxmlPath) {
-        String cssPath = fxmlPath.replace("/fxml/", "/css/").replace(".fxml", ".css");
-        
-        if (cssPath.contains("Shop")) {
-            cssPath = "/css/shopstyle.css";
-        } else if (cssPath.contains("LoginView")) {
-            cssPath = "/css/loginstyle.css";
-        }
-        
-        try {
-            String cssUri = getClass().getResource(cssPath).toExternalForm();
-            scene.getStylesheets().add(cssUri);
-            System.out.println("Stylesheet berhasil dimuat: " + cssUri);
-        } catch (NullPointerException e) {
-            System.err.println("Stylesheet tidak ditemukan untuk: " + cssPath + ". Menggunakan style default.");
-        }
-    }
-    
-    // ==================== UTILITY METHODS ====================
     
     private Image createSafeImage(String path) {
         if (path == null || path.trim().isEmpty()) return null;
